# systemc

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: full_adder2.h.CE4E2AAD3AD64874.idx  full_adder_driver.h.4CE2929B2584D7ED.idx  full_adder_monitor.h.2BA9803C70E22248.idx  main.cpp.BCBCC7913EE620C2.idx  rmsnorm.cc.6C549E280EB2DE09.idx  rmsnorm.h.A6C5FB6A5F6F945E.idx  test_bench.h.FFE32F36A91CD78D.idx
include/: full_adder2.h  full_adder_driver.h  full_adder_monitor.h  rmsnorm.h  test_bench.h
src/: CMakeLists.txt
